// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs renders correctly with default values 1`] = `
<DocumentFragment>
  .emotion-1 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: inline;
}

.emotion-3[aria-current='page'] {
  color: #b2b6c3;
}

.emotion-3:not(:last-child)::after {
  content: '›';
  margin: 0 8px;
}

<<<<<<< HEAD
.emotion-6 {
=======
.emotion-5 {
>>>>>>> refactor: use colors from theme 1 (#150)
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #4f0599;
}

<<<<<<< HEAD
.emotion-6:hover,
.emotion-6:focus {
=======
.emotion-5:hover,
.emotion-5:focus {
>>>>>>> refactor: use colors from theme 1 (#150)
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<<<<<<< HEAD
.emotion-6:hover,
.emotion-6:focus {
=======
.emotion-5:hover,
.emotion-5:focus {
>>>>>>> refactor: use colors from theme 1 (#150)
  color: #4f0599;
}

<nav
    aria-label="Breadcrumb"
    class="emotion-0"
  >
    <ol
      class="emotion-1 emotion-2"
    >
      <li
        class="emotion-3 emotion-4"
      >
        <a
<<<<<<< HEAD
          class="emotion-5 emotion-6"
=======
          class="emotion-5"
>>>>>>> refactor: use colors from theme 1 (#150)
          href="/step1"
          to="/step1"
        >
          Step 1
        </a>
      </li>
      <li
        class="emotion-3 emotion-4"
      >
        <a
<<<<<<< HEAD
          class="emotion-5 emotion-6"
=======
          class="emotion-5"
>>>>>>> refactor: use colors from theme 1 (#150)
          href="/step1/step2"
          to="/step1/step2"
        >
          I'm a very long... long long step
        </a>
      </li>
      <li
        aria-current="page"
        class="emotion-3 emotion-4"
      >
        Step 3
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumbs renders correctly with variant bubble 1`] = `
<DocumentFragment>
  .emotion-1 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-weight: 500;
  line-height: 24px;
  border-radius: 24px;
  border-style: solid;
  border-width: 1px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 48px;
  padding-right: 24px;
  margin-left: -24px;
  margin-right: -24px;
  background-color: #45d6b5;
  color: #fff;
  border-color: #fff;
}

.emotion-3:first-child {
  padding-left: 24px;
  margin-left: 0;
  margin-right: -24px;
}

.emotion-3:last-child {
  margin-right: 0;
}

.emotion-3[aria-current='page'] {
  background-color: #4f0599;
  color: #fff;
  border-color: #fff;
}

.emotion-3[aria-current='page']:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.emotion-3[aria-current='page']~.emotion-3 {
  background-color: #fff;
  color: #b2b6c3;
  border-color: #d4dae7;
}

.emotion-3[aria-current='page']~.emotion-3:focus {
  box-shadow: 0 0 0 2px rgba(178,182,195,0.25);
}

.emotion-3:nth-child(1) {
  z-index: 10;
}

.emotion-3:nth-child(2) {
  z-index: 9;
}

.emotion-3:nth-child(3) {
  z-index: 8;
}

.emotion-3:nth-child(4) {
  z-index: 7;
}

.emotion-3:nth-child(5) {
  z-index: 6;
}

.emotion-3:nth-child(6) {
  z-index: 5;
}

.emotion-3:nth-child(7) {
  z-index: 4;
}

.emotion-3:nth-child(8) {
  z-index: 3;
}

.emotion-3:nth-child(9) {
  z-index: 2;
}

.emotion-3:nth-child(10) {
  z-index: 1;
}

<<<<<<< HEAD
.emotion-6 {
=======
.emotion-5 {
>>>>>>> refactor: use colors from theme 1 (#150)
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #4f0599;
}

<<<<<<< HEAD
.emotion-6:hover,
.emotion-6:focus {
=======
.emotion-5:hover,
.emotion-5:focus {
>>>>>>> refactor: use colors from theme 1 (#150)
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<<<<<<< HEAD
.emotion-6:hover,
.emotion-6:focus {
=======
.emotion-5:hover,
.emotion-5:focus {
>>>>>>> refactor: use colors from theme 1 (#150)
  color: #4f0599;
}

<nav
    aria-label="Breadcrumb"
    class="emotion-0"
  >
    <ol
      class="emotion-1 emotion-2"
    >
      <li
        class="emotion-3 emotion-4"
      >
        <a
<<<<<<< HEAD
          class="emotion-5 emotion-6"
=======
          class="emotion-5"
>>>>>>> refactor: use colors from theme 1 (#150)
          href="/step1"
          to="/step1"
        >
          Step 1
        </a>
      </li>
      <li
        class="emotion-3 emotion-4"
      >
        <a
<<<<<<< HEAD
          class="emotion-5 emotion-6"
=======
          class="emotion-5"
>>>>>>> refactor: use colors from theme 1 (#150)
          href="/step1/step2"
          to="/step1/step2"
        >
          I'm a very long... long long step
        </a>
      </li>
      <li
        aria-current="page"
        class="emotion-3 emotion-4"
      >
        Step 3
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;
